--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -1367,23 +1367,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
+   "cell_type": "markdown",
    "id": "10deb4bc-4de1-4d20-921e-4b1c7a0e1a6d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[tensor([[ 367, 2885, 1464, 1807]]), tensor([[2885, 1464, 1807, 3619]])]\n"
-     ]
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
     }
-   ],
+   },
+   "source": [
+    "The first_batch variable contains two tensors: the first tensor stores the input token IDs, and the second tensor stores the target token IDs. Since the max_length is set to 4, each of the two tensors contains 4 token IDs. Note that an input size of 4 is relatively small and only chosen for illustration purposes. It is common to train LLMs with input sizes of at least 256.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "second_batch = next(data_iter)\n",
     "print(second_batch)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -1482,8 +1490,17 @@
    "id": "44e014ca-1fc5-4b90-b6fa-c2097bb92c0b",
    "metadata": {},
    "source": [
-    "- Suppose we have the following four input examples with input ids 2, 3, 5, and 1 (after tokenization):"
+    "- we initialize these embedding weights with random values as a preliminary step. This initialization serves as the starting point for the LLM's learning process."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- Suppose we have the following four input examples with input ids 2, 3, 5, and 1 (after tokenization):"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -1554,6 +1571,8 @@
    "id": "26fcf4f5-0801-4eb4-bb90-acce87935ac7",
    "metadata": {},
    "source": [
+    "- There is one row for each of the six possible tokens in the vocabulary. And there is one column for each of the three embedding dimensions.\n",
+    "\n",
     "- For those who are familiar with one-hot encoding, the embedding layer approach above is essentially just a more efficient way of implementing one-hot encoding followed by matrix multiplication in a fully-connected layer\n",
     "\n",
     "- Because the embedding layer is just a more efficient implementation that is equivalent to the one-hot encoding and matrix-multiplication approach it can be seen as a neural network layer that can be optimized via backpropagation"
@@ -1636,7 +1655,9 @@
    "id": "c393d270-b950-4bc8-99ea-97d74f2ea0f6",
    "metadata": {},
    "source": [
-    "## 2.8 Encoding word positions"
+    "## 2.8 Encoding word positions\n",
+    "\n",
+    "- add positional information about a token within a text."
    ]
   },
   {
@@ -1644,7 +1665,7 @@
    "id": "24940068-1099-4698-bdc0-e798515e2902",
    "metadata": {},
    "source": [
-    "- Embedding layer convert IDs into identical vector representations regardless of where they are located in the input sequence:"
+    "- Embedding layer convert IDs into identical vector representations regardless of where they are located in the input sequence (For example, the token ID 5, whether it's in the first or third position in the token ID input vector, will result in the same embedding vector):"
    ]
   },
   {
@@ -1660,7 +1681,9 @@
    "id": "92a7d7fe-38a5-46e6-8db6-b688887b0430",
    "metadata": {},
    "source": [
-    "- Positional embeddings are combined with the token embedding vector to form the input embeddings for a large language model:"
+    "- since the self-attention mechanism of LLMs itself is also position-agnostic, it is helpful to inject additional position information into the LLM.\n",
+    "- Positional embeddings are combined with the token embedding vector to form the input embeddings for a large language model.\n",
+    "- The token embeddings are shown with value 1 for simplicity:"
    ]
   },
   {
@@ -1749,30 +1772,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 75,
+   "cell_type": "markdown",
    "id": "7766ec38-30d0-4128-8c31-f49f063c43d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([8, 4, 256])\n"
-     ]
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
     }
-   ],
+   },
+   "source": [
+    "- As we can see, the token ID tensor is 8x4-dimensional, meaning that the data batch consists of 8 text samples with 4 tokens each.\n",
+    "- Let's now use the embedding layer to embed these token IDs into 256- dimensional vectors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "token_embeddings = token_embedding_layer(inputs)\n",
     "print(token_embeddings.shape)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
    "id": "fe2ae164-6f19-4e32-b9e5-76950fcf1c9f",
    "metadata": {},
    "source": [
-    "- GPT-2 uses absolute position embeddings, so we just create another embedding layer:"
+    "- As we can tell based on the 8x4x256-dimensional tensor output, each token ID is now embedded as a 256-dimensional vector.\n",
+    "- GPT-2 uses absolute position embeddings, explained above, so we just create another embedding layer that has the same dimension as the token_embedding_layer:"
    ]
   },
   {
@@ -1838,7 +1871,8 @@
    "metadata": {},
    "source": [
     "- In the initial phase of the input processing workflow, the input text is segmented into separate tokens\n",
-    "- Following this segmentation, these tokens are transformed into token IDs based on a predefined vocabulary:"
+    "- Following this segmentation, these tokens are transformed into token IDs based on a predefined vocabulary.\n",
+    "- The token IDs are converted into embedding vectors to which positional embeddings of a similar size are added, resulting in input embeddings that are used as input for the main LLM layers:"
    ]
   },
   {
