made some very minor changes

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -26,21 +26,16 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The figure depicts different attention mechanisms we will code in this chapter, starting with a simplified version of self-attention before adding the trainable weights. The causal attention mechanism adds a mask to self-attention that allows the LLM to generate one word at a time. Finally, multi-head attention organizes the attention mechanism into multiple heads, allowing the model to capture various aspects of the input data in parallel."
-   ],
    "metadata": {
     "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
+   },
    "source": [
-    "Who was the first to propose attention models? Hint: not the transformers paper (year 2014)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "The figure depicts different attention mechanisms we will code in this lab, starting with a **simplified version of self-attention** before adding the trainable weights. \n",
+    "\n",
+    "The **causal attention mechanism** adds a mask to self-attention that allows the LLM to generate one word at a time. \n",
+    "\n",
+    "Finally, **multi-head attention** organizes the attention mechanism into multiple heads, allowing the model to capture various aspects of the input data in parallel."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,6 +43,16 @@
    "metadata": {},
    "source": [
     "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch03_compressed/02.webp\" width=\"700px\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f05db9e",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Who was the first to propose attention models? Hint: not the transformers paper (year 2014)"
    ]
   },
   {
@@ -103,12 +108,12 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## 2 Capturing data dependencies with attention mechanisms"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## 2 Capturing data dependencies with attention mechanisms"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1010,18 +1015,17 @@
    "metadata": {},
    "source": [
     "- The reason for the normalization by the embedding dimension size is to improve the training performance by avoiding small gradients. For instance, when scaling up the embedding dimension, which is typically greater than thousand for GPT-like LLMs, large dot products can result in very small gradients during backpropagation due to the softmax function applied to them. As dot products increase, the softmax function behaves more like a step function, resulting in gradients nearing zero. These small gradients can drastically slow down learning or cause training to stagnate.\n",
-    "- In the final step of the self-attention computation, we compute the context vector by combining all value vectors via the attention weights (weighted sum over the value vectors.).\n",
-    "-"
+    "- In the final step of the self-attention computation, we compute the context vector by combining all value vectors via the attention weights (weighted sum over the value vectors.)."
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch03_compressed/17.webp\" width=\"700px\">"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch03_compressed/17.webp\" width=\"700px\">"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1055,7 +1059,7 @@
    "id": "9d7b2907-e448-473e-b46c-77735a7281d8",
    "metadata": {},
    "source": [
-    "Why query, key, and value? ( borrowed from the domain of information retrieval and databases).\n",
+    "Why query, key, and value? (borrowed from the domain of information retrieval and databases).\n",
     "- A \"query\" is analogous to a search query in a database. It represents the current item (e.g., a word or token in a sentence) the model focuses on or tries to understand. The query is used to probe the other parts of the input sequence to determine how much attention to pay to them.\n",
     "- The \"key\" is like a database key used for indexing and searching. In the attention mechanism, each item in the input sequence (e.g., each word in a sentence) has an associated key. These keys are used to match with the query.\n",
     "- The \"value\" in this context is similar to the value in a key-value pair in a database. It represents the actual content or representation of the input items. Once the model determines which keys (and thus which parts of the input) are most relevant to the query (the current focus item), it retrieves the corresponding values.\n",
@@ -1126,8 +1130,8 @@
    "id": "7ee1a024-84a5-425a-9567-54ab4e4ed445",
    "metadata": {},
    "source": [
-    "- we transform the input vectors in the input matrix X with the three weight matrices, Wq, Wk, and Wv. Then, we compute the attention weight matrix based on the resulting queries (Q) and keys (K). Using the attention weights and values (V), we then compute the context vectors (Z).\n",
-    "-\n",
+    "- We transform the input vectors in the input matrix X with the three weight matrices, Wq, Wk, and Wv. Then, we compute the attention weight matrix based on the resulting queries (Q) and keys (K). Using the attention weights and values (V), we then compute the context vectors (Z).\n",
+    "\n",
     "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch03_compressed/18.webp\" width=\"600px\">"
    ]
   },
@@ -1366,7 +1370,7 @@
    "id": "94db92d7-c397-4e42-bd8a-6a2b3e237e0f",
    "metadata": {},
    "source": [
-    "-  we can renormalize the attention weights as follows:"
+    "-  We can renormalize the attention weights as follows:"
    ]
   },
   {
@@ -1585,7 +1589,7 @@
    "metadata": {},
    "source": [
     "- Now, we are ready to implement a working implementation of self-attention, including the causal and dropout masks\n",
-    "- One more thing is to implement the code to handle batches consisting of more than one input so that our `CausalAttention` class supports the batch outputs produced by the data loader we implemented in chapter 2\n",
+    "- One more thing is to implement the code to handle batches consisting of more than one input so that our `CausalAttention` class supports the batch outputs produced by the data loader we implemented in lab 1\n",
     "- For simplicity, to simulate such batch input, we duplicate the input text example:"
    ]
   },
