added assignment to lab3

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -647,12 +647,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "48b20288",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "3333a305-aa3d-460a-bcce-b80662d464d9",
@@ -1748,7 +1742,7 @@
    "metadata": {},
    "source": [
     "- In practice, it is easier to train the model without weight-tying, which is why we didn't implement it here\n",
-    "- Lastly, we can compute the memory requirements of the model as follows, which can be a helpful reference point:"
+    "- Lastly, we can compute the **memory requirements** of the model as follows, which can be a helpful reference point:"
    ]
   },
   {
@@ -1773,34 +1767,6 @@
     "total_size_mb = total_size_bytes / (1024 * 1024)\n",
     "\n",
     "print(f\"Total size of the model: {total_size_mb:.2f} MB\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "309a3be4-c20a-4657-b4e0-77c97510b47c",
-   "metadata": {},
-   "source": [
-    "- Exercise: you can try the following other configurations, which are referenced in the [GPT-2 paper](https://scholar.google.com/citations?view_op=view_citation&hl=en&user=dOad5HoAAAAJ&citation_for_view=dOad5HoAAAAJ:YsMSGLbcyi4C), as well.\n",
-    "\n",
-    "    - **GPT2-small** (the 124M configuration we already implemented):\n",
-    "        - \"emb_dim\" = 768\n",
-    "        - \"n_layers\" = 12\n",
-    "        - \"n_heads\" = 12\n",
-    "\n",
-    "    - **GPT2-medium:**\n",
-    "        - \"emb_dim\" = 1024\n",
-    "        - \"n_layers\" = 24\n",
-    "        - \"n_heads\" = 16\n",
-    "    \n",
-    "    - **GPT2-large:**\n",
-    "        - \"emb_dim\" = 1280\n",
-    "        - \"n_layers\" = 36\n",
-    "        - \"n_heads\" = 20\n",
-    "    \n",
-    "    - **GPT2-XL:**\n",
-    "        - \"emb_dim\" = 1600\n",
-    "        - \"n_layers\" = 48\n",
-    "        - \"n_heads\" = 25"
    ]
   },
   {
@@ -2101,6 +2067,69 @@
     "- Note that the model is untrained; hence the random output texts above\n",
     "- We will train the model in the next lab"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b52ebbe",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5344710d",
+   "metadata": {},
+   "source": [
+    "To be uploaded here: https://forms.gle/983X7w35txpEuRZo9\n",
+    "\n",
+    "**Deadline**: November 28th, 2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf7785c",
+   "metadata": {},
+   "source": [
+    "# Exercise: Initialize larger GPT models\n",
+    "    \n",
+    "- Try the following other configurations, which are referenced in the [GPT-2 paper](https://scholar.google.com/citations?view_op=view_citation&hl=en&user=dOad5HoAAAAJ&citation_for_view=dOad5HoAAAAJ:YsMSGLbcyi4C).\n",
+    "\n",
+    "    - **GPT2-small** (the 124M configuration we already implemented):\n",
+    "        - \"emb_dim\" = 768\n",
+    "        - \"n_layers\" = 12\n",
+    "        - \"n_heads\" = 12\n",
+    "\n",
+    "    - **GPT2-medium:**\n",
+    "        - \"emb_dim\" = 1024\n",
+    "        - \"n_layers\" = 24\n",
+    "        - \"n_heads\" = 16\n",
+    "    \n",
+    "    - **GPT2-large:**\n",
+    "        - \"emb_dim\" = 1280\n",
+    "        - \"n_layers\" = 36\n",
+    "        - \"n_heads\" = 20\n",
+    "    \n",
+    "    - **GPT2-XL:**\n",
+    "        - \"emb_dim\" = 1600\n",
+    "        - \"n_layers\" = 48\n",
+    "        - \"n_heads\" = 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20878d5c",
+   "metadata": {},
+   "source": [
+    "Print the number of parameters and memory requirements for each of these models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c24cf5b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
