--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -81,7 +81,8 @@
     "- GPT and Llama generate words sequentially and are based on the decoder part of the original transformer architecture\n",
     "- Therefore, these LLMs are often referred to as \"decoder-like\" LLMs\n",
     "- Compared to conventional deep learning models, LLMs are larger, mainly due to their vast number of parameters, not the amount of code\n",
-    "- However, despite model size, the model architecture is not complicated, since many of its components are repeated."
+    "- However, despite model size, the model architecture is not complicated, since many of its components are repeated.\n",
+    "- Next to the embedding layers, it consists of one or more transformer blocks containing the masked multi-head attention module we implemented in the previous lab."
    ]
   },
   {
@@ -99,7 +100,8 @@
    "source": [
     "- In previous labs, we used small embedding dimensions for token inputs and outputs for ease of illustration\n",
     "- In this lab, we consider embedding and model sizes akin to a small GPT-2 model\n",
-    "- We'll specifically code the architecture of the smallest GPT-2 model (124 million parameters), as outlined in Radford et al.'s [Language Models are Unsupervised Multitask Learners](https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf) (note that the initial report lists it as 117M parameters, but this was later corrected in the model weight repository)"
+    "- We'll specifically code the architecture of the smallest GPT-2 model (124 million parameters), as outlined in Radford et al.'s [Language Models are Unsupervised Multitask Learners](https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf) (note that the initial report lists it as 117M parameters, but this was later corrected in the model weight repository)\n",
+    "- We use GPT-2 because their weights are public. GPT-3 is just a scaled up version."
    ]
   },
   {
@@ -241,6 +243,7 @@
     "        \n",
     "        # Use a placeholder for LayerNorm\n",
     "        self.final_norm = DummyLayerNorm(cfg[\"emb_dim\"])\n",
+    "        # maps the final hidden state of the transformer model (768 dimensions) to the vocabulary size (50257).\n",
     "        self.out_head = nn.Linear(\n",
     "            cfg[\"emb_dim\"], cfg[\"vocab_size\"], bias=False\n",
     "        )\n",
@@ -384,7 +387,9 @@
     "- The model outputs are commonly referred to as logits\n",
     "- The output tensor has two rows corresponding to the two text samples. Each\n",
     "text sample consists of 4 tokens; each token is a 50,257-dimensional vector,\n",
-    "which matches the size of the tokenizer's vocabulary"
+    "which matches the size of the tokenizer's vocabulary.\n",
+    "- The value in each dimension represents the logit score for that word, indicating how likely the model thinks that word is the correct next word in the sequence.\n",
+    "- Now let's code the placeholders."
    ]
   },
   {
@@ -407,6 +412,7 @@
     "find a set of parameters (weights) for the neural network that minimizes the\n",
     "loss function.\n",
     "- Layer normalization, also known as LayerNorm ([Ba et al. 2016](https://arxiv.org/abs/1607.06450)), centers the activations of a neural network layer around a mean of 0 and normalizes their variance to 1\n",
+    "- Variance = how spread out the data points are from the mean.\n",
     "- This stabilizes training and enables faster convergence to effective weights\n",
     "- Layer normalization is applied both before and after the multi-head attention module within the transformer block, which we will implement later; it's also applied before the final output layer"
    ]
@@ -678,6 +684,8 @@
     "- The initial `scale` (multiplying by 1) and `shift` (adding 0) values don't have any effect; however, `scale` and `shift` are trainable parameters that the LLM automatically adjusts during training if it is determined that doing so would improve the model's performance on its training task\n",
     "- This allows the model to learn appropriate scaling and shifting that best suit the data it is processing\n",
     "- Note that we also add a smaller value (`eps`) before computing the square root of the variance; this is to avoid division-by-zero errors if the variance is 0\n",
+    "- At first glance this seems useless, we set the mean to 0 and then we introduce a parameter that allows it to be set back to another arbitrary value.\n",
+    "- It has to do with the learning dynamics. In the old parametrization, the mean was determined by a complicated interaction between the parameters in the layers below. In the new parametrization, the mean is determined solely by the new value. The new parametrization is much easier to learn with gradient descent.\n",
     "\n",
     "**Biased variance**\n",
     "- In the variance calculation above, setting `unbiased=False` means using the formula $\\frac{\\sum_i (x_i - \\bar{x})^2}{n}$ to compute the variance where n is the sample size (here, the number of features or columns); this formula does not include Bessel's correction (which uses `n-1` in the denominator), thus providing a biased estimate of the variance \n",
@@ -1057,7 +1065,7 @@
     "def print_gradients(model, x):\n",
     "    # Forward pass\n",
     "    output = model(x)\n",
-    "    target = torch.tensor([[0.]])\n",
+    "    target = torch.tensor([[0.]])  # user suplied target 0 for simplicity\n",
     "\n",
     "    # Calculate loss based on how close the target\n",
     "    # and output are\n",
@@ -1066,7 +1074,7 @@
     "    \n",
     "    # Backward pass to calculate the gradients\n",
     "    loss.backward()\n",
-    "\n",
+    "    # We can iterate through the weight parameters via model.named_parameters()\n",
     "    for name, param in model.named_parameters():\n",
     "        if 'weight' in name:\n",
     "            # Print the mean absolute gradient of the weights\n",
