--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -412,7 +412,7 @@
    "id": "ad90592f-0d5d-4ec8-9ff5-e7675beab10e",
    "metadata": {},
    "source": [
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/proba-index.webp\" width=500px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/proba-index.webp\" width=700px>"
    ]
   },
   {
@@ -446,7 +446,7 @@
    ],
    "source": [
     "text_idx = 0\n",
-    "target_probas_1 = probas[text_idx, [0, 1, 2], targets[text_idx]]\n",
+    "target_probas_1 = probas[text_idx, [0, 1, 2], targets[text_idx]]  # probas is a 2,3,50k vector. text_idx is first sentence, and we take the targets indexes.\n",
     "print(\"Text 1:\", target_probas_1)\n",
     "\n",
     "text_idx = 1\n",
@@ -459,8 +459,10 @@
    "id": "a0e89a19-73c2-4e49-93b4-861f699f1cbf",
    "metadata": {},
    "source": [
+    "- As we can see, these values are really small.\n",
     "- We want to maximize all these values, bringing them close to a probability of 1\n",
-    "- In mathematical optimization, it is easier to maximize the logarithm of the probability score than the probability score itself; this is out of the scope of this book, but I have recorded a lecture with more details here: [L8.2 Logistic Regression Loss Function](https://www.youtube.com/watch?v=GxJe0DZvydM)"
+    "- In mathematical optimization, it is easier to maximize the logarithm of the probability score than the probability score itself;\n",
+    "- We replace the product with a sum, which is simpler to calculate and it is more stable (for small numbers)."
    ]
   },
   {
@@ -538,7 +540,8 @@
    "metadata": {},
    "source": [
     "- In deep learning, instead of maximizing the average log-probability, it's a standard convention to minimize the *negative* average log-probability value; in our case, instead of maximizing -10.7722 so that it approaches 0, in deep learning, we would minimize 10.7722 so that it approaches 0\n",
-    "- The value negative of -10.7722, i.e., 10.7722, is also called cross-entropy loss in deep learning"
+    "- The value negative of -10.7722, i.e., 10.7722, is also called cross-entropy loss in deep learning\n",
+    "- The negative log-probability (negating the log of the correct class's probability) is referred to as the cross-entropy loss."
    ]
   },
   {
@@ -573,7 +576,7 @@
    "id": "5bd24b7f-b760-47ad-bc84-86d13794aa54",
    "metadata": {},
    "source": [
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/cross-entropy.webp?123\" width=400px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/cross-entropy.webp?123\" width=700px>"
    ]
   },
   {
@@ -724,6 +727,7 @@
    "metadata": {},
    "source": [
     "- The perplexity is often considered more interpretable because it can be understood as the effective vocabulary size that the model is uncertain about at each step (in the example above, that'd be 48,725 words or tokens)\n",
+    "- A perplexity of 10 means that, on avearage, the model assigns reasonable probability to 10 potential words at each step.\n",
     "- In other words, perplexity provides a measure of how well the probability distribution predicted by the model matches the actual distribution of the words in the dataset\n",
     "- Similar to the loss, a lower perplexity indicates that the model predictions are closer to the actual distribution"
    ]
@@ -893,7 +897,7 @@
    "id": "46bdaa07-ba96-4ac1-9d71-b3cc153910d9",
    "metadata": {},
    "source": [
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/batching.webp\" width=500px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/batching.webp\" width=700px>"
    ]
   },
   {
