--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -1009,7 +1009,10 @@
     "\n",
     "print(\"\\nValidation loader:\")\n",
     "for x, y in val_loader:\n",
-    "    print(x.shape, y.shape)"
+    "    print(x.shape, y.shape)\n",
+    "\n",
+    "# 9 training set batches, batch size of 2 samples, max seq length equal to the 256-tokens\n",
+    "# As expected, the input data (x) and target data (y) have the same shape (the batch size times the number of tokens in each batch) since the targets are the inputs shifted by one position"
    ]
   },
   {
@@ -1017,6 +1020,7 @@
    "id": "f7b9b1a4-863d-456f-a8dd-c07fb5c024ed",
    "metadata": {},
    "source": [
+    "- in practice, it can also be beneficial to train an LLM with variable-length inputs to help the LLM to better generalize across different types of inputs when it is being used.\n",
     "- Another optional check that the token sizes are in the expected ballpark:"
    ]
   },
@@ -1062,7 +1066,8 @@
    "metadata": {},
    "source": [
     "- Next, we implement a utility function to calculate the cross-entropy loss of a given batch\n",
-    "- In addition, we implement a second utility function to compute the loss for a user-specified number of batches in a data loader"
+    "- In addition, we implement a second utility function to compute the loss for a user-specified number of batches in a data loader\n",
+    "via the num_batches parameter if a user wants to specify a smaller number."
    ]
   },
   {
@@ -1160,7 +1165,7 @@
    "id": "43875e95-190f-4b17-8f9a-35034ba649ec",
    "metadata": {},
    "source": [
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/mental-model-1.webp\" width=400px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/mental-model-1.webp\" width=700px>"
    ]
   },
   {
@@ -1179,9 +1184,9 @@
    "metadata": {},
    "source": [
     "- In this section, we finally implement the code for training the LLM\n",
-    "- We focus on a simple training function (if you are interested in augmenting this training function with more advanced techniques, such as learning rate warmup, cosine annealing, and gradient clipping, please refer to [Appendix D](../../appendix-D/01_main-chapter-code))\n",
+    "- We focus on a simple training function, there are more advanced techniques, such as learning rate warmup, cosine annealing, and gradient clipping.\n",
     "\n",
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/train-steps.webp\" width=300px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch05_compressed/train-steps.webp\" width=700px>"
    ]
   },
   {
