--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -1892,7 +1892,17 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "To be uploaded here: https://forms.gle/3KsB6P9QMexna62y9\n",
+    "\n",
+    "**Deadline**: December 15, 2024\n",
+    "\n",
+    "# Exercise\n",
+    "\n",
+    "- Play around with different temperatures and top-k settings. Based on your observations, can you think of applications where lower temperature and top- k settings are desired? Vice versa, can you think of applications where higher temperature and top-k settings are preferred?\n",
+    "\n",
+    "- What are the different combinations of settings for the generate function to force deterministic behavior, that is, disabling the random sampling such that it always produces the same outputs similar to the generate_simple function?"
+   ],
    "metadata": {
     "collapsed": false
    }
