--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -1893,9 +1893,18 @@
   {
    "cell_type": "markdown",
    "source": [
+    "\n",
     "To be uploaded here: https://forms.gle/3KsB6P9QMexna62y9\n",
     "\n",
-    "**Deadline**: December 15, 2024\n",
+    "**Deadline**: December 15, 2024\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "\n",
     "# Exercise\n",
     "\n",
