--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -385,6 +385,8 @@
     "id": "e7b6e631-4f0b-4aab-82b9-8898e6663109"
    },
    "source": [
+    "- The name comes from a Monty Python sketch in which the name of the canned pork product Spam is ubiquitous, unavoidable, and repetitive.\n",
+    "- Ham is good, spam is bad.\n",
     "- When we check the class distribution, we see that the data contains \"ham\" (i.e., \"not spam\") much more frequently than \"spam\""
    ]
   },
@@ -748,7 +750,7 @@
     "            self.max_length = self._longest_encoded_length()\n",
     "        else:\n",
     "            self.max_length = max_length\n",
-    "            # Truncate sequences if they are longer than max_length\n",
+    "            # Truncate sequences if they are longer than max_length in val and test datasets\n",
     "            self.encoded_texts = [\n",
     "                encoded_text[:self.max_length]\n",
     "                for encoded_text in self.encoded_texts\n",
@@ -986,7 +988,7 @@
    "source": [
     "- In this section, we initialize the pretrained model we worked with in the previous chapter\n",
     "\n",
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch06_compressed/overview-2.webp\" width=500px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch06_compressed/overview-2.webp\" width=700px>"
    ]
   },
   {
@@ -1171,7 +1173,7 @@
    "id": "d6e9d66f-76b2-40fc-9ec5-3f972a8db9c0",
    "metadata": {},
    "source": [
-    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch06_compressed/lm-head.webp\" width=500px>"
+    "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch06_compressed/lm-head.webp\" width=700px>"
    ]
   },
   {
@@ -1495,7 +1497,7 @@
    "metadata": {},
    "source": [
     "- Technically, it's sufficient to only train the output layer\n",
-    "- However, as I found in [Finetuning Large Language Models](https://magazine.sebastianraschka.com/p/finetuning-large-language-models), experiments show that finetuning additional layers can noticeably improve the performance\n",
+    "- However, as found in [Finetuning Large Language Models](https://magazine.sebastianraschka.com/p/finetuning-large-language-models), experiments show that finetuning additional layers can noticeably improve the performance\n",
     "- So, we are also making the last transformer block and the final `LayerNorm` module connecting the last transformer block to the output layer trainable"
    ]
   },
@@ -1875,9 +1877,8 @@
    "source": [
     "- Before we can start finetuning (/training), we first have to define the loss function we want to optimize during training\n",
     "- The goal is to maximize the spam classification accuracy of the model; however, classification accuracy is not a differentiable function\n",
-    "- Hence, instead, we minimize the cross-entropy loss as a proxy for maximizing the classification accuracy (you can learn more about this topic in lecture 8 of my freely available [Introduction to Deep Learning](https://sebastianraschka.com/blog/2021/dl-course.html#l08-multinomial-logistic-regression--softmax-regression) class)\n",
-    "\n",
-    "- The `calc_loss_batch` function is the same here as in chapter 5, except that we are only interested in optimizing the last token `model(input_batch)[:, -1, :]` instead of all tokens `model(input_batch)`"
+    "- Hence, instead, we minimize the cross-entropy loss as a proxy for maximizing the classification accuracy\n",
+    "- The `calc_loss_batch` function is the same here as in previous lab, except that we are only interested in optimizing the last token `model(input_batch)[:, -1, :]` instead of all tokens `model(input_batch)`"
    ]
   },
   {
@@ -2496,20 +2497,13 @@
    "cell_type": "markdown",
    "id": "5b70ac71-234f-4eeb-b33d-c62726d50cd4",
    "metadata": {
-    "id": "5b70ac71-234f-4eeb-b33d-c62726d50cd4"
+    "id": "5b70ac71-234f-4eeb-b33d-c62726d50cd4",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
-    "## Summary and takeaways"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dafdc910-d616-47ab-aa85-f90c6e7ed80e",
-   "metadata": {},
-   "source": [
-    "- See the [./gpt_class_finetune.py](./gpt_class_finetune.py) script, a self-contained script for classification finetuning\n",
-    "- You can find the exercise solutions in [./exercise-solutions.ipynb](./exercise-solutions.ipynb)\n",
-    "- In addition, interested readers can find an introduction to parameter-efficient training with low-rank adaptation (LoRA) in [appendix E](../../appendix-E)"
+    "No homework, focus on projects. "
    ]
   }
  ],
