--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -1028,7 +1028,7 @@
     "id": "6a4e9c5f-7c49-4321-9f1b-a50468a84524"
    },
    "source": [
-    "- In practice, it is also common to mask out the target token IDs that correspond to the instruction, as illustrated in the figure below (this is a recommended reader exercise after completing the chapter)"
+    "- In practice, it is also common to mask out the target token IDs that correspond to the instruction, as illustrated in the figure below"
    ]
   },
   {
@@ -2663,12 +2663,7 @@
     "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch07_compressed/final-overview.webp?1\" width=700px>\n",
     "\n",
     "- An optional step that is sometimes followed after instruction finetuning, as described in this lab, is preference finetuning\n",
-    "- Preference finetuning process can be particularly useful for customizing a model to better align with specific user preferences; see the [../04_preference-tuning-with-dpo](https://github.com/rasbt/LLMs-from-scratch/tree/bb31de89993441224e9005926dedad95395bb058/ch07/04_preference-tuning-with-dpo) folder if you are interested in this\n",
-    "\n",
-    "- You can also find Bonus Material for the book we've been following in these labs here: [Bonus Material](https://github.com/rasbt/LLMs-from-scratch?tab=readme-ov-file#bonus-material)\n",
-    "\n",
-    "- You may be interested in using different and more powerful LLMs for real-world applications\n",
-    "  - For this, you may consider popular tools such as axolotl ([https://github.com/OpenAccess-AI-Collective/axolotl](https://github.com/OpenAccess-AI-Collective/axolotl)) or LitGPT ([https://github.com/Lightning-AI/litgpt](https://github.com/Lightning-AI/litgpt))"
+    "- Preference finetuning process can be particularly useful for customizing a model to better align with specific user preferences; "
    ]
   }
  ],
